misalignment of facebook icon fixed

--- a/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
+++ b/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
@@ -1167,3 +1167,9 @@ $breakpoint_tablet: 979px;
 		}
 	}
 }
+
+/*Facebook css bug - misalignment*/
+ .fb_iframe_widget span 
+{
+    vertical-align: baseline !important;
+ }
